[package]
name = "rusty_neat"
version = "0.1.0"
edition = "2021"
description = "Simple NEAT lib"
readme = "README.md"
license-file = "LICENSE.md"
homepage = "https://github.com/HVisMyLife/rusty_neat"
repository = "https://github.com/HVisMyLife/rusty_neat"
keywords = ["neat", "neural_network", "ai"]
categories = ["mathematics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.125", features = ["derive"] }
toml = "^0.8"

rand = "^0.9"
rand_distr = "^0.5"

simplesvg = "^0.4"

rayon = "^1.10"
itertools = "^0.14"

# ndarray = { version = "^0.16", features = ["rayon", "serde"]}
#ndarray-rand = "^0.14.0"
