[package]
name = "rusty_neat"
version = "0.2.0"
edition = "2024"
description = "Pretty good NEAT implementation"
readme = "README.md"
license-file = "LICENSE.md"
homepage = "https://github.com/HVisMyLife/rusty_neat"
repository = "https://github.com/HVisMyLife/rusty_neat"
keywords = ["neat", "neural_network", "neuroevolution", "AI", "gating"]
categories = ["mathematics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.10"
itertools = "^0.14"

rand = "^0.9"
rand_distr = "^0.5"

serde_with = "^3.12"
serde = { version = "^1.0.125", features = ["derive"] }
toml = "^0.8"

simplesvg = { version = "^0.4", optional = true }
usvg = { version = "^0.37", optional = true }
nsvg = { version = "^0.5", optional = true }

[features]
visu = ["dep:simplesvg", "dep:usvg", "dep:nsvg"]

[package.metadata.docs.rs]
features = ["visu", "simplesvg", "usvg", "nsvg"]
# [package.metadata.crates.io]
# features = ["visu", "simplesvg", "usvg", "nsvg"]
